crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_delete.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Delete(
    DeleteStatement {
        entity: Issue(
            IssueId(
                "my-project#456",
            ),
        ),
    },
)
