crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_is_null.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            IsNull(
                "assignee",
            ),
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
