crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_multiple_field_updates.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "my-project#100",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "status",
                value: String(
                    "closed",
                ),
            },
            FieldUpdate {
                field: "priority",
                value: Priority(
                    Medium,
                ),
            },
            FieldUpdate {
                field: "assignee",
                value: String(
                    "bob",
                ),
            },
        ],
    },
)
