crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_not_operator.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Not(
                Comparison {
                    field: "status",
                    op: Equal,
                    value: String(
                        "closed",
                    ),
                },
            ),
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
