crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_offset.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: None,
        order_by: None,
        limit: Some(
            10,
        ),
        offset: Some(
            20,
        ),
    },
)
