crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_order_asc.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: None,
        order_by: Some(
            OrderBy {
                field: "created_at",
                direction: Asc,
            },
        ),
        limit: None,
        offset: None,
    },
)
