crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_project_qualified_issue.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Close(
    CloseStatement {
        issue_id: IssueId(
            "my-project#42",
        ),
        reason: Some(
            Done,
        ),
    },
)
