crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_update.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "my-project#123",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "status",
                value: String(
                    "closed",
                ),
            },
            FieldUpdate {
                field: "priority",
                value: Priority(
                    Low,
                ),
            },
        ],
    },
)
