crates/iql-parser/src/snapshots/issuecraft_ql__tests__priority_in_different_cases-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: ProjectId(
            "test",
        ),
        title: "T",
        kind: Bug,
        description: None,
        priority: Some(
            Critical,
        ),
        assignee: None,
    },
)
